@@ -1,3 +1,9 @@
+2005-10-23  Moritz Schulte  <moritz@g10code.com>
+
+	* poldi-ctrl.c (cmd_remove_user): Be more verbose (through jnlib
+	logging).
+	Removed dump-shadowed-key command.
+
 2005-10-16  Moritz Schulte  <moritz@g10code.com>
 
 	* poldi-ctrl.c (key_file_create, key_file_remove): Re-ordered functions.
